Allow pasting single cells from excel into an HTML editor. bug 228920, r=neil sr=jst